# ModernSL

./: .gitignore  CMakeLists.txt  README  README.md
include/: Train.h  assets.h  consts.h  glob_enums.h  prompts.h
resources/: build-instructions.md
src/: Train.cpp  main.cpp
